Website initial finish

--- a/main/templates/main/Articles/C++/1003.html
+++ b/main/templates/main/Articles/C++/1003.html
@@ -68,6 +68,8 @@
                     You should know these at least enough to make a linked list and trie (which are the most useful data structure that is not implemented in STL) in about 5-7 minutes, complete with an insert (or search) function (and yes you may be asked to do this in an interview). You should be very comfortable with them - I doubt pointers and classes will be explicitly asked about (you might be asked about OOP Concepts though), but you may very well have to use them.
                 </li>
             </ul>
+            </div>
+    </p>
             <p class="article-subhead">
                 Who is a Good C++ Developer?
             </p>
@@ -103,10 +105,10 @@
               <ul><li>Network programming (e.g. firmware for routers and switches)</li></ul>
                <ul><li>Acceleration of computationally intensive code parts (e.g. plugins for scripting languages)</li></ul>
              <ul><li>Virtual Reality applications</li></ul>
-              <ul><li>And many more….</li></ul>
+              <ul><li>And many more….</li></ul><br>
+              Your career options depend on your personal interests and your passion. It is generally a problem, giving good career advice. That's something that depends on so many subjective parts that can't be evaluated objectively.
              </div>
              <br>
-             Your career options depend on your personal interests and your passion. It is generally a problem, giving good career advice. That's something that depends on so many subjective parts that can't be evaluated objectively.
             </p>
             <p class="article-subhead">
                 What is the Pay by Experience Level for C++ Developers?
@@ -117,7 +119,7 @@
                 </div>
             </p>
             <div class="img-container" style="text-align: center;">
-                <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp31_fookav.png" alt="1001">
+                <img class="article-img" style="height: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp31_fookav.png" alt="1001">
                 <p classname="article-img-desc">
                     <b>
                         Pay by experience level of C++ developer.
@@ -139,8 +141,8 @@ Finally, C++ is present in most of the operating systems, such as Windows or iOS
             <p class="article-content">
                 Based on the above we can surely say C++ is far from its end. Although it is not among the most trendy technologies anymore, it is still irreplaceable in most of the applications named above. In fact, the TIOBE index for May 2017 places C++ in the 3rd place.
             </p>
-        </div>
-</p>
+        
+
 </div>
 
 
