--- a/main/templates/main/Articles/MLAI/1003.html
+++ b/main/templates/main/Articles/MLAI/1003.html
@@ -18,7 +18,7 @@
         Data Science is a field that refers to collective processes, theories, concepts, and tools that enable the review, analysis, and extraction of valuable insights and information from raw data which can be in any form like text, pixel data, or numerical data.
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/mlai6_oohtd2.png" alt="1001">
+        <img class="article-img" style="height: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/mlai6_oohtd2.png" alt="1001">
     </div>
     <p class="article-subheading">
         Applications of Data Science
@@ -51,7 +51,7 @@
         </div>
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 700px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/mlai5_rv2d3v.png" alt="1001">
+        <img class="article-img" style="height: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/mlai5_rv2d3v.png" alt="1001">
         <p classname="article-img-desc">
             <b>
                 
@@ -131,7 +131,7 @@
         </p>
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/mlai4_ogkqsg.png" alt="1001">
+        <img class="article-img" style="height: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128567/Resources/Articles/mlai4_ogkqsg.png" alt="1001">
     </div> 
 
  <div>
@@ -141,7 +141,7 @@
         The demand for Machine Learning is high but companies require individuals to have the correct skill sets. The demand for these engineers is always high. The list is endless. That’s the primary reason machine learning salary in India is quite high. The ever-increasing demand. Additionally, the better the experience, the higher is the salary. The average machine learning salary in India, according to ‘Payscale’, is approximately Rs. 686,281 per year, inclusive of bonuses and profit-sharing.
 </p>
 <div class="img-container" style="text-align: center;">
-    <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/mlai3_zpvpkl.png" alt="1001">
+    <img class="article-img" height="100%" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/mlai3_zpvpkl.png" alt="1001">
     <p classname="article-img-desc">
         <b>
             
