--- a/main/templates/main/Articles/WebDev/1003.html
+++ b/main/templates/main/Articles/WebDev/1003.html
@@ -83,7 +83,7 @@ server.
         </div>
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/webdev3_te8jdr.png" alt="1001">
+        <img class="article-img" style="height: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/webdev3_te8jdr.png" alt="1001">
     </div>
     <p class="article-subhead">
         Why should you choose a career in web
@@ -154,7 +154,7 @@ Because websites can be built from anywhere in the world, some web developer job
                                 Employer Salaries for Web Developer
                             </p>  
                             <div class="img-container" style="text-align: center;">
-                                <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/WEBDEV4_wmjonq.png" alt="1001">
+                                <img class="article-img" style="height: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/WEBDEV4_wmjonq.png" alt="1001">
                                 <p classname="article-img-desc">
                                     <b>
                                         Pay by experience level
