--- a/main/templates/main/Articles/C++/1002.html
+++ b/main/templates/main/Articles/C++/1002.html
@@ -41,7 +41,7 @@
     </div>
 </p>
 <div class="img-container" style="text-align: center;">
-    <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp2_mvviqb.png" alt="1001">
+    <img class="article-img" style="height: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128568/Resources/Articles/cpp2_mvviqb.png" alt="1001">
 
     <p classname="article-img-desc">
         <b>
