--- a/main/templates/main/Articles/WebDev/1002.html
+++ b/main/templates/main/Articles/WebDev/1002.html
@@ -32,7 +32,7 @@
         </div>
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 500px;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/webdev2_amhvh1.png" alt="1001">
+        <img class="article-img" style="height: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603128566/Resources/Articles/webdev2_amhvh1.png" alt="1001">
     </div>
     <p class="article-subhead">
        Disadvantages of web app development
