Home Page Section Change

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -37,6 +37,15 @@
         .logo:hover{
             color: #51ffc5;
         }
+        .article-main-img{
+            margin: 4% 4% 4% 4%;
+            padding-right: 7%;
+            width: 100%;
+        }
+        .section1, .section3{
+            box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.3);
+        }
+        
         .awesome {
             -webkit-animation:colorchange 8s infinite alternate;
           }
