--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -42,7 +42,7 @@
     <div class="row mb-5">
         <div class="col-lg-6 col-md-6 mb-lg-0 mb-5">
             <div class="avatar mx-auto">
-              <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601988702/Team%20Photo/Bhabatosh_bpkwds.jpg" class="rounded-circle z-depth-1"
+              <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601988702/Team%20Photo/Bhabatosh_bpkwds.jpg" class="rounded-circle z-depth-1 team"
                 alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Bhabatosh Mahanta</h5>
@@ -67,7 +67,7 @@
               </ul>
           </div><div class="col-lg-6 col-md-6 mb-lg-0 mb-5">
             <div class="avatar mx-auto">
-              <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982943/Team%20Photo/Rashmi_Ranjan_Das_uavlap.jpg" class="rounded-circle z-depth-1"
+              <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982943/Team%20Photo/Rashmi_Ranjan_Das_uavlap.jpg" class="rounded-circle z-depth-1 team"
                 alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Rashmi Ranjan Das</h5>
@@ -98,11 +98,11 @@
     <div class="row mb-5">
       <div class="col-lg-4 col-md-4 mb-lg-0 mb-5">
         <div class="avatar mx-auto">
-          <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601980099/Smita_Jha_mtrypb.jpg" class="rounded-circle z-depth-1"
+          <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601980099/Smita_Jha_mtrypb.jpg" class="rounded-circle z-depth-1 team"
             alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Smita Jha</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Front-End Developer & Content Writer</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Front-End Developer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
         <ul class="list-unstyled mb-0">
           <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/profile.php?id=100005560818601" style="color: black; text-decoration: none;">
@@ -121,7 +121,7 @@
       </div>
       <div class="col-lg-4 col-md-4 mb-lg-0 mb-5">
         <div class="avatar mx-auto">
-          <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601989516/Team%20Photo/Shovna_zvma0l.jpg" class="rounded-circle z-depth-1"
+          <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601989516/Team%20Photo/Shovna_zvma0l.jpg" class="rounded-circle z-depth-1 team"
             alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Shovna Panda</h5>
@@ -139,7 +139,7 @@
       </div>
       <div class="col-lg-4 col-md-4 mb-md-0 mb-5">
         <div class="avatar mx-auto">
-          <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602103896/Team%20Photo/Suman_gyawbn.jpg" class="rounded-circle z-depth-1"
+          <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602103896/Team%20Photo/Suman_gyawbn.jpg" class="rounded-circle z-depth-1 team"
             alt="Sample avatar" style="height: 60%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Suman Patra</h5>
@@ -164,7 +164,7 @@
     <div class="row mb-5">
         <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
           <div class="avatar mx-auto">
-            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982252/Team%20Photo/Sobhan_c4gbad.jpg" class="rounded-circle z-depth-1"
+            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982252/Team%20Photo/Sobhan_c4gbad.jpg" class="rounded-circle z-depth-1 team"
               alt="Sample avatar" style="height: 63.5%; width: 63.5%; box-shadow: 5px 5px 20px rgb(66 77 84)">
           </div>
           <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Sobhan Kumar Rath</h5>
@@ -187,7 +187,7 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
           <div class="avatar mx-auto">
-            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602269849/Team%20Photo/Jaydeep_2_sdl9dt.jpg" class="rounded-circle z-depth-1"
+            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602269849/Team%20Photo/Jaydeep_2_sdl9dt.jpg" class="rounded-circle z-depth-1 team"
               alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
           </div>
           <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Jaydeep Kanungo</h5>
@@ -207,7 +207,7 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
           <div class="avatar mx-auto">
-            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601989922/Team%20Photo/Pratik_yrzqfz.jpg" class="rounded-circle z-depth-1"
+            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601989922/Team%20Photo/Pratik_yrzqfz.jpg" class="rounded-circle z-depth-1 team"
               alt="Sample avatar" style="height: 68%; width: 68%; box-shadow: 5px 5px 20px rgb(66 77 84)">
           </div>
           <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Pratik Mohanty</h5>
@@ -227,7 +227,7 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="avatar mx-auto">
-            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982943/Team%20Photo/Rashmi_Ranjan_Das_uavlap.jpg" class="rounded-circle z-depth-1"
+            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982943/Team%20Photo/Rashmi_Ranjan_Das_uavlap.jpg" class="rounded-circle z-depth-1 team"
               alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
           </div>
           <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Rashmi Ranjan Das</h5>
@@ -258,7 +258,7 @@
       <div class="row">
             <div class="col-lg-6 col-md-6 mb-lg-0 mt-2 mb-5">
             <div class="avatar mx-auto">
-                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603132545/Team%20Photo/IMG_20200325_175940_512_k8pm0g.jpg" class="rounded-circle z-depth-1"
+                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603132545/Team%20Photo/IMG_20200325_175940_512_k8pm0g.jpg" class="rounded-circle z-depth-1 team"
                 alt="Sample avatar" style="height: 35%; width: 35%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Sudhanshu Dubey</h5>
@@ -275,7 +275,7 @@
             </div>
             <div class="col-lg-6 col-md-6 mb-lg-0 mb-5">
             <div class="avatar mx-auto">
-                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601984055/Team%20Photo/Shreyas_nmjwyt.jpg" class="rounded-circle z-depth-1"
+                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601984055/Team%20Photo/Shreyas_nmjwyt.jpg" class="rounded-circle z-depth-1 team"
                 alt="Sample avatar" style="height: 35%; width: 35%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Shreyas PJ</h5>
