Python Quizzes Added

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -62,10 +62,6 @@
             padding-right: 7%;
             width: 100%;
         }
-        .team:hover{
-            border: 12px solid black;
-            transition-duration: 0.6s;
-        }
         .section1, .section3{
             box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.3);
         }
@@ -115,7 +111,7 @@
             }
             80% {
            
-              color: cyan;
+              color:royalblue;
             }
             
             90% {
@@ -202,17 +198,17 @@
         <hr>
         <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
-            <a class="btn-floating btn-fb mx-1">
+            <a class="btn-floating btn-fb mx-1" href="https://www.facebook.com/PathaPadhain-102671518313555/">
             <i class="fab fa-facebook-f fa-lg fb"> </i>
             </a>
         </li>
         <li class="list-inline-item">
-            <a class="btn-floating btn-tw mx-1">
-            <i class="fab fa-twitter tt fa-lg"> </i>
+            <a class="btn-floating btn-tw mx-1" href="https://www.youtube.com/channel/UCh6Soj_LewjsTvgQc4NiU5w">
+            <i class="fab fa-youtube tt fa-lg"> </i>
             </a>
         </li>
         <li class="list-inline-item">
-            <a class="btn-floating btn-gplus mx-1">
+            <a class="btn-floating btn-gplus mx-1" href="https://www.instagram.com/pathapadha.in/">
             <i class="fab fa-instagram insta fa-lg"> </i>
             </a>
         </li>
@@ -222,7 +218,7 @@
             </a>
         </li>
         <li class="list-inline-item">
-            <a class="btn-floating btn-dribbble mx-1">
+            <a class="btn-floating btn-dribbble mx-1" href="https://www.pathapadha.in/">
             <i class="fab fa-dribbble website fa-lg"> </i>
             </a>
         </li>
