--- a/main/templates/main/exam.html
+++ b/main/templates/main/exam.html
@@ -46,35 +46,77 @@
                 <div>
                   <iframe src="https://trinket.io/embed/python3/f066802f75" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
                 </div>
+                <div class="text-center">
+                    <h2>Weekly Quiz as per Tutorials</h2><br>
+                    <p class="article-content disabled">Coming Soon...Stay Tuned</p><br>
+                    <h2>Common Quiz Topic Wise</h2>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26367928' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
-                    </ul>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26933575' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26934297' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26934664' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26953135' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26935873' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26936362' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26952617' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26952762' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26952859' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26952967' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26953058' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26953231' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26953188' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26953268' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                        <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26953367' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                      </ul>
+                    </div>
               </div>
               
               <div id="menu2" class="container tab-pane fade"><br>
                 <p class="article-content"><b>Want to practice C++ ? Visit: <a href="https://www.tutorialspoint.com/compile_cpp_online.php">C++ Online IDE</a></b></p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item article-content">C++ Theory MCQ 1</li>
-                    <li class="list-group-item article-content">C++ Theory MCQ 2</li>
-                    <li class="list-group-item article-content">C++ Output MCQ</li>
-                    <li class="list-group-item article-content">C++ Error Finding MCQ</li>
-                  </ul>
+                <div class="text-center">
+                  <h2>Weekly Quiz as per Tutorials</h2><br>
+                  <p class="article-content disabled">Coming Soon...Stay Tuned</p><br>
+                  <h2>Common Quiz Topic Wise</h2>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                    </ul>
+                  </div>
               </div>  
               <div id="menu3" class="container tab-pane fade"><br>
                 <iframe src="https://trinket.io/embed/html/0ddc0fb049" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item article-content">HTML MCQ 1</li>
-                    <li class="list-group-item article-content">HTML MCQ 2</li>
-                  </ul>
+                <div class="text-center">
+                  <h2>Weekly Quiz as per Tutorials</h2><br>
+                  <p class="article-content disabled">Coming Soon...Stay Tuned</p><br>
+                  <h2>Common Quiz Topic Wise</h2>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                    </ul>
+                  </div>
               </div>
               <div id="menu4" class="container tab-pane fade"><br>
                 <iframe src="https://trinket.io/embed/java/bd2b9ff968" width="100%" height="500" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
               </div>
               <div id="menu5" class="container tab-pane fade"><br>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item article-content">Arduino MCQ 1</li>
-                  <li class="list-group-item article-content">Arduino MCQ 2</li>
-                </ul>
+                <div class="text-center">
+                  <h2>Weekly Quiz as per Tutorials</h2><br>
+                  <p class="article-content disabled">Coming Soon...Stay Tuned</p><br>
+                  <h2>Common Quiz Topic Wise</h2>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                      <li class="list-group-item article-content">C++ Quiz</li>
+                    </ul>
+                  </div>
                 
               </div>
             </div>
