--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,7 +1,9 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+
 {% block content %}
+
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -25,7 +27,7 @@
         </svg>
     </a>
   </div>
-<div class="container-fluid section2 text-center" style="padding:4%; background-color:mintcream;">
+<div class="container-fluid section2 text-center" style="padding:4%; background-image:url('https://res.cloudinary.com/pathapadha-in/image/upload/v1603736399/Back_mr5c80.png')">
   <h1 style="font-weight: 700; color: black">Presenting Before You Something Like Never Before</h1><br>
     <hr style="height:3px;border-width:1;color:black;background-color:black"><br>
     <h1 style="font-weight: 1000; font-family:sans-serif" class="awesome">THE FIRST EVER ODIA E-LEARNING PLATFORM FOR FREE</h1><br>
@@ -51,7 +53,7 @@
         <div style="text-align: center;">
           <h5 class="card-title">Programming Tutorial</h5>
         </div>
-        <p class="card-text">Get Started with Coding with our free tutorials in <b>ODIA</b> for a better grasp on the concepts and thereby Better Understanding. </p>
+        <p class="card-text">Get Started with Coding with our free coding tutorials in <b>ODIA</b> for a better grasp on the concepts and there by Better Understanding. </p>
         <div style="text-align: center;"><a href="{% url 'explore' %}"><p >Tutorials</p></a></div>
       </div>
     </div>
@@ -84,8 +86,15 @@
   <br>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5" style="text-align: center;">
-          <h2>Quote of the Moment</h2>
-          <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded" style="margin-top: 28%;">
+          <h2>Thought of the Moment</h2>
+          <div class="text-center mt-4">
+            <span><svg style="color: red;" width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-bookmark-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 0a2 2 0 0 0-2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4zm4 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
+</svg> <span class="article-content"> Most Popular </span> <svg style="color: red;" width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-bookmark-heart-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 0a2 2 0 0 0-2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4zm4 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
+</svg></span>
+          </div>
+          <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded" style="margin-top: 17%;">
             <div class="blockquote-custom-icon bg-info shadow-sm"><i class="fa fa-quote-left text-white"></i></div>
             <p class="mb-0 mt-2 font-italic">"{{quote.quote}}"</p>
             <footer class="blockquote-footer pt-4 mt-4 border-top">
@@ -101,9 +110,9 @@
                 <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
               </svg></span></h1>
             <div class="rating">
-              &nbsp;&nbsp;<svg width="1.6em" height="1.6em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              &nbsp;&nbsp;<svg width="1.8em" height="1.8em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-            </svg>  {{number}}
+            </svg> <b> {{number}} </b> 
             </div>
         </div>
 
@@ -175,7 +184,7 @@
                 <div class="card-body text-center">
                   <span class="badge-box"><i class="fa fa-check"></i></span>
                   <h4 class="card-title">Jaydeep Kanungo</h4>
-                  <p class="card-text article-content" >Get into the world of Arduino and Robotics with me. :)</p>
+                  <p class="card-text article-content" >Get into the world of Arduino with me</p>
                   <div  class="btn btn-default text-uppercase">Explore</div>
                 </div>
               </div>
@@ -220,7 +229,7 @@
         </div>
       </div>
       <br>
-        <div class="container mt-5" style="text-align: center;">
+        <div class="container" style="text-align: center; margin-top:12%">
           <a href="{% url 'about' %}"><div class="btn btn-primary">View All Members</div></a>
         </div>  
     </div>
