--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -23,6 +23,12 @@
             font-weight: 500;
             margin: 0.15%;
         }
+        .tt, .fb, .linkedin, .insta, .website{
+          color:white;
+        }
+        .tt:hover{
+          color: red;
+        }
         .blockquote-custom {
             position: relative;
             font-size: 1.1rem;
@@ -179,6 +185,7 @@
                     <p>An Initiative for the Advancement of Technical Skills of Students of Odisha by Teaching them Coding in Our Native Language.</p>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4">
+                  <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603477015/Resources/circle-cropped_f7sgrb.png" alt="" style="height: 25%; width:27%">
                     <h5 class="font-weight-bold text-uppercase" style="margin: 10%; color: #51ffc5">PathaPadha.in</h5>
                     <h5 class="font-weight-bold text-uppercase" style="margin: 10%; color: #51ffc5">ପାଠପଢା.in</h5>
                     <h5 class="font-weight-bold text-uppercase">Help us grow by donating</h5>
@@ -213,7 +220,7 @@
             </a>
         </li>
         <li class="list-inline-item">
-            <a class="btn-floating btn-li mx-1">
+            <a class="btn-floating btn-li mx-1" href="https://www.linkedin.com/company/pathapadha-e-learning/">
             <i class="fab fa-linkedin-in linkedin fa-lg"> </i>
             </a>
         </li>
