--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -349,7 +349,8 @@
                         alt="Third sample avatar image" style="height: 23%; width: 23%">
                     </div>
                     <p>
-                      <i class="fas fa-quote-left"></i>There are many students who come out of their schooling life from Odia Schools and thus it gets difficult for them to understand the concepts of programming. Keeping this in mind, Our team has come forward to help you all.<i class="fas fa-quote-right"></i></p>
+                      <i class="fas fa-quote-left"></i>Education is power. In this fast moving world, Language should no longer be a barrier. All you need is passion and willingness to learn. 
+                      Your zeal combined with our offerings provide the most powerful and first hand experience to conquer the odds.<i class="fas fa-quote-right"></i></p>
                     <h4 class="font-weight-bold">Suman Patra</h4>
                     <h6 class="font-weight-bold my-3">Front-End Designer</h6>
                     </div>
