--- a/main/templates/main/explore.html
+++ b/main/templates/main/explore.html
@@ -18,8 +18,19 @@
     </p>
     <p class="article-content">So <b>GET READY</b> to fly high in your career by learning from our tutorials. Browse through the below videos and <b>Get Started</b>.</p> 
     </div>
-  </div>   
-<div class="container mt-4 section2">
+  </div> 
+
+  <!-------------------------------------------Temporary------------------------------------------------>
+  <br><br>
+  <div class="container mt-3 section2 text-center">
+    <h1>Coming Soon...</h1>
+  </div>
+  <!------------------------------------------------------------------------------------------------------>
+
+
+
+
+<div class="container mt-4 section2" style="display: none;">
     <h1 style="color:  #00378a;">Current Available And Ongoing Courses</h1>
     <h3 class="mt-5">Python Tutorials (In Odia)</h3>
     <div class="card-deck mb-2 mt-3">
